Navegação de abas arrumada

--- a/inicio.html
+++ b/inicio.html
@@ -19,9 +19,9 @@
     <div id="menu-bar" class="fas fa-bars"></div>
 
     <nav class="navbar">
-        <a href="#inicio"><i class="fas fa-home"></i>Início</a>
-        <a href="#cardapio"><i class="fas fa-pizza-slice"></i>Cardápio</a>
-        <a href="#bebidas"><i class="fas fa-wine-glass"></i>Bebidas</a>
+        <a href="inicio.html"><i class="fas fa-home"></i>Início</a>
+        <a href="cardapio.html"><i class="fas fa-pizza-slice"></i>Cardápio</a>
+        <a href="bebidas.html"><i class="fas fa-wine-glass"></i>Bebidas</a>
         <a href="#pedidos"><i class="fas fa-shopping-bag"></i>Sacola</a>
     </nav>
 
