--- a/conta.html
+++ b/conta.html
@@ -32,7 +32,7 @@
                         <label for="nome">Qual seu nome?</label>
                         <input type="text" id="nome" name="nome" required placeholder="Informe seu nome">
                         <label for="cpf">Qual o seu CPF?</label>
-                        <input type="text" id="cpf" name="cpf" required placeholder="Informa pra gente seu CPF">
+                        <input type="text" id="cpf" name="cpf" required placeholder="Informa seu CPF">
                         <label for="email">Qual é o seu e-mail?</label>
                         <input type="email" id="email" name="email" required placeholder="Informe seu e-mail">
                         <label for="senha">Qual sera sua senha?</label>
