--- a/inicio.html
+++ b/inicio.html
@@ -46,7 +46,7 @@
         <div class="content">
             <h3>Fome de pizza? Peça agora!</h3>
             <p>Aproveite essa oportunidade e peça uma de nossas maravilhosas pizzas para nos ajudar no valor da DP</p>
-            <a href="#cardapio" class="btn">Ver cardápio</a>
+            <a href="cardapio.html" class="btn">Ver cardápio</a>
         </div>
 
         <div class="image">
