- JSON pedido arrumado
- login.js criado o GET

- redirecionamentos arrumados

--- a/bebidas.html
+++ b/bebidas.html
@@ -38,7 +38,7 @@
         <div id="cart-items"></div>
         <p>Total: R$ <span id="total-price">0,00</span></p>
         <button class="btn-cancelar" id="cancelar-pedido">Cancelar Pedido</button>
-        <a href="pagina-de-pagamento.html" class="btn-finalizar">Finalizar</a>
+        <a href="#" class="btn-finalizar" id="finalizar-pedido">Finalizar</a>
     </div>
 </div>
 
