--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                         <input type="email" id="email" name="email" required placeholder="Informe seu e-mail">
                         <label for="senha">Qual a sua senha?</label>
                         <input type="password" id="senha" name="senha" required placeholder="Agora, digite sua senha">
-                        <button type="submit">Acessar</button>
+                        <button type="submit" id="acessar">Acessar</button>
 
                     </form>
                 </div>
@@ -62,7 +62,7 @@
                 validarFormatoCPF(cpf);
             });
         </script>
-
+        <script src="./src/js/login.js"></script>
 </body>
 
 </html>
