--- a/cardapio.html
+++ b/cardapio.html
@@ -32,15 +32,15 @@
 
   <div class="popup-container" id="popup">
     <div class="popup-content">
-        <span class="close-btn" id="close-popup">&times;</span>
-        <h2>Sacola</h2>
-        <div id="empty-cart-message" style="display: none;">Sacola Vazia</div>
-        <div id="cart-items"></div>
-        <p>Total: R$ <span id="total-price">0,00</span></p>
-        <button class="btn-cancelar" id="cancelar-pedido">Cancelar Pedido</button>
-        <a href="#" class="btn-finalizar" id="finalizar-pedido">Finalizar</a>
+      <span class="close-btn" id="close-popup">&times;</span>
+      <h2>Sacola</h2>
+      <div id="empty-cart-message" style="display: none;">Sacola Vazia</div>
+      <div id="cart-items"></div>
+      <p>Total: R$ <span id="total-price">0,00</span></p>
+      <button class="btn-cancelar" id="cancelar-pedido">Cancelar Pedido</button>
+      <a href="#" class="btn-finalizar" id="finalizar-pedido">Finalizar</a>
     </div>
-</div>
+  </div>
 
 
   <section class="cardapio" id="cardapio">
@@ -50,7 +50,7 @@
     <div class="box-container">
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$42,99</span>
         <img src="./src/imagens/pepperoni-v1.jpg" alt="">
         <h3>Peperoni</h3>
         <div class="stars">
@@ -60,11 +60,16 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="1">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="1">Média</a>
+          <a href="#" class="bom" data-id-pizza="1">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="1">Adicionar</a>
       </div>
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$25,99</span>
         <img src="./src/imagens/queijo_hut.jpg" alt="">
         <h3>Queijo</h3>
         <div class="stars">
@@ -74,11 +79,16 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="2">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="2">Média</a>
+          <a href="#" class="bom" data-id-pizza="2">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="2">Adicionar</a>
       </div>
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$37,99</span>
         <img src="./src/imagens/corn-e-bacon.jpg" alt="">
         <h3>Bacon</h3>
         <div class="stars">
@@ -88,11 +98,16 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="3">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="3">Média</a>
+          <a href="#" class="bom" data-id-pizza="3">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="3">Adicionar</a>
       </div>
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$37,99</span>
         <img src="./src/imagens/Brasileira.jpg" alt="">
         <h3>A moda da casa</h3>
         <div class="stars">
@@ -102,11 +117,16 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="4">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="4">Média</a>
+          <a href="#" class="bom" data-id-pizza="4">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="4">Adicionar</a>
       </div>
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$35,99</span>
         <img src="./src/imagens/vegetariana.jpg" alt="">
         <h3>Vegetariana</h3>
         <div class="stars">
@@ -116,12 +136,17 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="5">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="5">Média</a>
+          <a href="#" class="bom" data-id-pizza="5">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="5">Adicionar</a>
       </div>
 
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$33,99</span>
         <img src="./src/imagens/marguerita.jpg" alt="">
         <h3>Marguerita</h3>
         <div class="stars">
@@ -131,11 +156,16 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="6">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="6">Média</a>
+          <a href="#" class="bom" data-id-pizza="6">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="6">Adicionar</a>
       </div>
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$25,99</span>
         <img src="./src/imagens/calabresa.jpg" alt="">
         <h3>Calabresa</h3>
         <div class="stars">
@@ -145,11 +175,16 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="7">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="7">Média</a>
+          <a href="#" class="bom" data-id-pizza="7">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="7">Adicionar</a>
       </div>
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$40,99</span>
         <img src="./src/imagens/frango-e-requeijao-v1.jpg" alt="">
         <h3>Frango</h3>
         <div class="stars">
@@ -159,11 +194,16 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="8">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="8">Média</a>
+          <a href="#" class="bom" data-id-pizza="8">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="8">Adicionar</a>
       </div>
 
       <div class="box">
-        <span class="price">R$32,99</span>
+        <span class="price">R$42,99</span>
         <img src="./src/imagens/4-queijos.jpg" alt="">
         <h3>4-queijos</h3>
         <div class="stars">
@@ -173,6 +213,11 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
         </div>
+        <div class="Tamanho">
+          <a href="#" class="bom" data-id-pizza="9">Pequena</a>
+          <a href="#" class="bom" data-id-pizza="9">Média</a>
+          <a href="#" class="bom" data-id-pizza="9">Grande</a>
+        </div>
         <a href="#" class="btn" data-id-pizza="9">Adicionar</a>
       </div>
 
@@ -180,9 +225,26 @@
 
     <script src="./src/js/inicio.js"></script>
     <script src="./src/js/sacola.js"></script>
-    
+
   </section>
 
+  <script>
+    const botoes = document.querySelectorAll('.bom');
+    botoes.forEach(botao => {
+      botao.addEventListener('click', () => {
+        botoes.forEach(b => {
+          b.classList.remove('selecionado');
+          b.style.backgroundColor = '';
+          b.style.color = 'red';
+
+        });
+        botao.classList.add('selecionado');
+        botao.style.backgroundColor = 'red';
+        botao.style.color = '#fff';
+      });
+    });
+
+  </script>
 </body>
 
 </html>
