--- a/pagamento.html
+++ b/pagamento.html
@@ -46,17 +46,17 @@
     <div class="content">
         <div class="caixa">
            <button class="peperonildo"><strong>Pix</strong></button>  
-           <img class="queijudao" src="./src/imagens/pix.svg" alt="">  
+           <img class="queijudao" src="./src/imagens/icons8-foto-50 (1).png" alt="">  
         </div>
         
         <div class="caixa">
             <button class="peperonildo"><strong>Dinheiro</strong></button>
-            <img class="queijudao" src="./src/imagens/money-check-dollar-solid.svg" alt="">
+            <img class="queijudao" src="./src/imagens/icons8-dinheiro-24.png" alt="">
         </div>
 
         <div class="caixa">
             <button class="peperonildo"><strong>Cartão</strong></button>
-            <img  class="queijudao" src="./src/imagens/credit-card-regular.svg" alt="">
+            <img  class="queijudao" src="./src/imagens/icons8-cartão-24.png" alt="">
         </div>
     </div>
 
