--- a/pagamento.html
+++ b/pagamento.html
@@ -56,7 +56,7 @@
 
         <div class="caixa">
             <button class="peperonildo"><strong>Cartão</strong></button>
-            <img  class="queijudao" src="./src/imagens/icons8-cartão-24.png" alt="">
+            <img  class="queijudao" src="./src/imagens/icons8-cartão-24.png" alt="pizza">
         </div>
     </div>
 
