--- a/cadastro.html
+++ b/cadastro.html
@@ -28,7 +28,7 @@
             <h2 class="vamos">Boa, vamos começar!</h2>
             <div class="new-conta">
                 <div id="new-form">
-                    <form id="new-form" action="cardapio.html" method="post">
+                    <form id="new-form" action="inicio.html" method="post">
 
                         <label for="nome">Qual seu nome?</label>
                         <input type="text" id="nome" name="nome" required placeholder="Informe seu nome">
