--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <nav>
             <a href="login.html" class="texto-entrar">Entrar</a>
-            <a href="conta.html" class="botao">Criar Conta</a>
+            <a href="cadastro.html" class="botao">Criar Conta</a>
         </nav>
     </header>
     <main>
