--- a/pagamento.html
+++ b/pagamento.html
@@ -73,7 +73,7 @@
                 <div id="empty-cart-message" style="display: none;">Sacola Vazia</div>
                 <div id="cart-items"></div>
                 <p>Total: R$ <span id="total-price">0,00</span></p>
-                <button class="joe"><strong>Finalizar</strong></button>
+                <a href="final.html"><button class="joe"><strong>Finalizar</strong></button></a>
             </div>
         </div>
     </section>
