--- a/cardapio.html
+++ b/cardapio.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="./src/css/inicio.css">
   <link rel="stylesheet" href="./src/css/sacola.css">
+  <link rel="icon" href="./src/imagens/logo-pizza-transformed.png" type="image/x-icon">
 </head>
 
 <body>
