--- a/pagamento.html
+++ b/pagamento.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="./src/css/pagamento.css">
-
+    <link rel="icon" href="./src/imagens/logo-pizza-transformed.png" type="image/x-icon">
 </head>
 
 <body>
