--- a/login.html
+++ b/login.html
@@ -42,6 +42,10 @@
             </div>
         </div>
 
+        <script src="./src/js/login.js"></script>
+        <script src="./src/js/sacola.js"></script>
+        
+
 </body>
 
 </html>
